[gd_scene load_steps=4 format=3 uid="uid://b5junnl76yqmo"]

[ext_resource type="Script" path="res://addons/godot_tours/bubble/task/task.gd" id="2_edua8"]
[ext_resource type="Texture2D" uid="uid://mk5pq7g1vapi" path="res://addons/godot_tours/bubble/assets/task/check.svg" id="3_3o3go"]
[ext_resource type="Texture2D" uid="uid://dcjtqpica5cvo" path="res://addons/godot_tours/bubble/assets/task/exclamation.svg" id="4_cjk6q"]

[node name="Task" type="PanelContainer"]
custom_minimum_size = Vector2(256, 0)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 66.0
grow_horizontal = 2
theme_type_variation = &"TaskPanelContainer"
script = ExtResource("2_edua8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_type_variation = &"TaskMarginContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Checkbox" type="Panel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
theme_type_variation = &"TaskCheckboxPanel"

[node name="Checkmark" type="TextureRect" parent="MarginContainer/HBoxContainer/Checkbox"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.478431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3o3go")
expand_mode = 4
stretch_mode = 5

[node name="ExclamationMark" type="TextureRect" parent="MarginContainer/HBoxContainer/Checkbox"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 6.0
offset_right = -2.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_cjk6q")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionRichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "Task"
fit_content = true
scroll_active = false

[node name="RepeatLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0 / 1"
vertical_alignment = 1

[node name="ErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"ErrorLabel"
autowrap_mode = 3
